[gd_scene load_steps=16 format=3 uid="uid://dqesnngabp81y"]

[ext_resource type="Script" uid="uid://nw5h72yahiwq" path="res://Scripts/frog_enemy.gd" id="1_4ygq6"]
[ext_resource type="Texture2D" uid="uid://u5ltq5h50s0x" path="res://Assets/PurpleBlue/ToxicFrogPurpleBlue_Sheet.png" id="2_afpow"]
[ext_resource type="AudioStream" uid="uid://7cr5v0amevnh" path="res://Extras/Sound_Effects/frog/sound-effects.mp3" id="3_c3muq"]
[ext_resource type="AudioStream" uid="uid://dh4eogggam7lq" path="res://Extras/Sound_Effects/frog/zıplayıp-gülen-kurbağa.mp3" id="3_xvrdk"]

[sub_resource type="Animation" id="Animation_1f0kj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackZone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_287tu"]
resource_name = "attack"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackZone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false, true, true]
}

[sub_resource type="Animation" id="Animation_0830c"]
resource_name = "damage"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_ghaa6"]
resource_name = "death"
length = 3.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogDead")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.409187,
"start_offset": 0.909186,
"stream": ExtResource("3_xvrdk")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_hghv2"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_afpow"]
resource_name = "walk"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1dp5w"]
_data = {
&"RESET": SubResource("Animation_1f0kj"),
&"attack": SubResource("Animation_287tu"),
&"damage": SubResource("Animation_0830c"),
&"death": SubResource("Animation_ghaa6"),
&"idle": SubResource("Animation_hghv2"),
&"walk": SubResource("Animation_afpow")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hghv2"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ygq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ygq6"]
size = Vector2(20, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3muq"]

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_4ygq6")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("2_afpow")
hframes = 9
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1dp5w")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_hghv2")

[node name="VisionRay" type="RayCast2D" parent="."]
target_position = Vector2(150, 0)
collision_mask = 4

[node name="HitboxArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_4ygq6")

[node name="AttackZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(16, -0.5)
shape = SubResource("RectangleShape2D_4ygq6")
disabled = true
debug_color = Color(0.720878, 0.248588, 1, 0.42)

[node name="NoticeZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeZone"]
position = Vector2(16, -1)
shape = SubResource("RectangleShape2D_c3muq")
debug_color = Color(0.527141, 0.414523, 1, 0.42)

[node name="FrogDead" type="AudioStreamPlayer2D" parent="."]

[node name="FrogReal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_c3muq")
volume_db = -15.0
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
